[project]
name = "qiitareactioncounter"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GitHub Actions", email = "actions@github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
test-workflow-py = "pytest -m 'workflow' --override-ini=addopts="
test-workflow = "bats tests/workflow/test_workflow.bats"
act-sample = "act -j publish -W .github/workflows/publish-to-testpypi.yaml -e tests/workflow/event.json"
test = "pytest"
lint = "uvx ruff check ."
format = "uvx ruff format ."