[project]
name = "qiitareactioncounter"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shimajiroxyz" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "autodoc-pydantic>=2.2.0",
    "pytest>=8.3.5",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
test-workflow-py = "pytest -m 'workflow' --override-ini=addopts="
test-workflow = "bats tests/workflow/test_workflow.bats"
act-sample = "act -j publish -W .github/workflows/publish-to-testpypi.yaml -e tests/workflow/event.json"
test = "pytest"
lint = "uvx ruff check ."
format = "uvx ruff format ."
docs-generate = "sphinx-apidoc -f -o docs/source src/qiitareactioncounter && sphinx-build -M clean docs/source docs/build && sphinx-build -M html docs/source docs/build"
docs-open = "open docs/build/html/index.html"
